--- a/static-files/index.html
+++ b/static-files/index.html
@@ -87,7 +87,7 @@
         <input type="number" id="perpage" name="perpage" required>
 
         <label for="depth">Depth:</label>
-        <input type="number" id="depth" name="depth" required>
+        <input type="text" id="depth" name="depth" required>
 
         <button type="submit">Submit</button>
     </form>
